--- a/h-charity-ui/src/app/modules/entity/pages/entity-view/entity-view.component.html
+++ b/h-charity-ui/src/app/modules/entity/pages/entity-view/entity-view.component.html
@@ -4,41 +4,39 @@
 
       <button pButton label="Give Feedback" icon="pi pi-comment" class="p-button-rounded p-button-help"
         (click)="showFeedbackDialog()" style="position: fixed; bottom: 20px; right: 20px;"></button>
-      <p-card>
-        <p-dialog [(visible)]="feedbackDialog" header="Feedback" [modal]="true" [style]="{ width: '50vw' }">
-          <form [formGroup]="feedbackForm" (ngSubmit)="submitFeedback()">
-            <div class="grid grid-nogutter flex-wrap gap-3 p-fluid">
-              <div class="col-12 md:col-12 lg:col-12">
-                <div class="grid">
-                  <div class="col-12 md:col-12 lg:col-12">
-                    <input type="text" pInputText placeholder="Name" formControlName="name" />
-                  </div>
-                  <div class="col-12 md:col-12 lg:col-12">
-                    <input type="text" pInputText placeholder="Contact Number" formControlName="contactNumber" />
-                  </div>
-                  <div class="col-12 md:col-12 lg:col-12">
-                    <input type="text" pInputText placeholder="Title" formControlName="title" />
-                  </div>
-                  <div class="col-12 md:col-12 lg:col-12">
-                    <p-editor formControlName="description" [style]="{ height: '200px' }"
-                      placeholder="Enter the Description">
-                    </p-editor>
-                  </div>
-                  <div class="col-12 md:col-12 lg:col-12">
-                    <p-checkbox binary="true" label="Is Anonymous?" formControlName="isAnonymous"></p-checkbox>
-                  </div>
-                  <div class="col-12 md:col-12 lg:col-12">
-                    <p-dropdown [options]="statuses" placeholder="Select Status" formControlName="status"></p-dropdown>
-                  </div>
+      <p-dialog [(visible)]="feedbackDialog" header="Feedback" [modal]="true" [style]="{ width: '50vw' }">
+        <form [formGroup]="feedbackForm" (ngSubmit)="submitFeedback()">
+          <div class="grid grid-nogutter flex-wrap gap-3 p-fluid">
+            <div class="col-12 md:col-12 lg:col-12">
+              <div class="grid">
+                <div class="col-12 md:col-12 lg:col-12">
+                  <input type="text" pInputText placeholder="Name" formControlName="name" />
+                </div>
+                <div class="col-12 md:col-12 lg:col-12">
+                  <input type="text" pInputText placeholder="Contact Number" formControlName="contactNumber" />
+                </div>
+                <div class="col-12 md:col-12 lg:col-12">
+                  <input type="text" pInputText placeholder="Title" formControlName="title" />
+                </div>
+                <div class="col-12 md:col-12 lg:col-12">
+                  <p-editor formControlName="description" [style]="{ height: '200px' }"
+                    placeholder="Enter the Description">
+                  </p-editor>
+                </div>
+                <div class="col-12 md:col-12 lg:col-12">
+                  <p-checkbox binary="true" label="Is Anonymous?" formControlName="isAnonymous"></p-checkbox>
+                </div>
+                <div class="col-12 md:col-12 lg:col-12">
+                  <p-dropdown [options]="statuses" placeholder="Select Status" formControlName="status"></p-dropdown>
                 </div>
               </div>
             </div>
-            <div class="col-12 text-center">
-              <button pButton label="Submit" type="submit" [disabled]="!feedbackForm.valid"></button>
-            </div>
-          </form>
-        </p-dialog>
-      </p-card>
+          </div>
+          <div class="col-12 text-center">
+            <button pButton label="Submit" type="submit" [disabled]="!feedbackForm.valid"></button>
+          </div>
+        </form>
+      </p-dialog>
 
       <div class="text-center p-3 border-round-sm font-bold">
         <h1>{{ entity && entity.name }}</h1>
@@ -115,6 +113,159 @@
     <div class="col-12 md:col-6 lg:col-6">
       <img *ngIf="entity && entity.entityPhotos.qrCode" src="{{ entity && entity.entityPhotos.qrCode }}" alt="qrcode"
         height="273px" />
+    </div>
+    <div class="col-12 md:col-12 lg:col-12">
+
+      <p-tabView>
+        <p-tabPanel header="Appeals">
+          <p-table [value]="appeals" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
+            [rowsPerPageOptions]="[5, 10, 20]" [showCurrentPageReport]="true">
+            <ng-template pTemplate="caption">
+              <div class="flex align-items-center justify-content-between">
+                Appeals
+                <p-button icon="pi pi-refresh" />
+              </div>
+            </ng-template>
+
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="min-width: 18rem"></th>
+                <th pSortableColumn="title" style="min-width: 25rem">
+                  Title
+                  <p-sortIcon field="title" />
+                </th>
+                <th pSortableColumn="requirementDate" style="min-width: 15rem">
+                  Requirement Date
+                  <p-sortIcon field="requirementDate" />
+                </th>
+                <th pSortableColumn="totalFundsRequired" style="min-width: 15rem">
+                  Total Funds Required
+                  <p-sortIcon field="totalFundsRequired" />
+                </th>
+                <th pSortableColumn="fundsReceived" style="min-width: 12rem">
+                  Funds Received
+                  <p-sortIcon field="fundsReceived" />
+                </th>
+                <th pSortableColumn="fundsNeeded" style="min-width: 12rem">
+                  Funds Needed
+                  <p-sortIcon field="fundsNeeded" />
+                </th>
+                <th pSortableColumn="isZakatEligible" style="min-width: 12rem">
+                  Zakat Eligible
+                  <p-sortIcon field="isZakatEligible" />
+                </th>
+                <th pSortableColumn="isIntrestEligible" style="min-width: 12rem">
+                  Interest Eligible
+                  <p-sortIcon field="isIntrestEligible" />
+                </th>
+                <th pSortableColumn="isAnonymous" style="min-width: 12rem">
+                  Is Anonymous
+                  <p-sortIcon field="isAnonymous" />
+                </th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-appeal>
+              <tr>
+                <td>
+                  <div class="flex justify-content-center flex-wrap gap-3 mb-4">
+                    <p-button icon="pi pi-pencil" [rounded]="true" [outlined]="true" severity="success"
+                      (onClick)="editAppeal(appeal.id)" *ngIf="showEditButton(appeal)" />
+                    <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
+                      (onClick)="deleteAppeal(appeal)" *ngIf="showDeleteButton(appeal)" />
+                    <p-button icon="pi pi-eye" class="mr-1" [rounded]="true" [outlined]="true"
+                      (onClick)="viewAppeal(appeal)" />
+                  </div>
+                </td>
+                <td>{{ appeal.title }}</td>
+                <td>{{ appeal.requirementDate | date : 'dd-MM-yyyy' }}</td>
+                <td>{{ appeal.totalFundsRequired }}</td>
+                <td>{{ appeal.fundsReceived }}</td>
+                <td>{{ appeal.fundsNeeded }}</td>
+                <td>{{ appeal.isZakatEligible ? 'Yes' : 'No' }}</td>
+                <td>{{ appeal.isIntrestEligible ? 'Yes' : 'No' }}</td>
+                <td>{{ appeal.isAnonymous ? 'Yes' : 'No' }}</td>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="summary">
+              <div class="flex align-items-center justify-content-between">
+                In total there are {{ appeals ? appeals.length : 0 }} appeals.
+              </div>
+            </ng-template>
+          </p-table>
+        </p-tabPanel>
+
+        <p-tabPanel header="Feedback">
+          <p-table [value]="feedbacks" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
+            [rowsPerPageOptions]="[5, 10, 20]" [showCurrentPageReport]="true">
+            <ng-template pTemplate="caption">
+              <div class="flex align-items-center justify-content-between">
+                Feedback
+                <p-button icon="pi pi-refresh" />
+              </div>
+            </ng-template>
+
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="min-width: 18rem"></th>
+                <th pSortableColumn="name" style="min-width: 15rem">
+                  Name
+                  <p-sortIcon field="name" />
+                </th>
+                <th pSortableColumn="contactNumber" style="min-width: 15rem">
+                  Contact Number
+                  <p-sortIcon field="contactNumber" />
+                </th>
+                <th pSortableColumn="title" style="min-width: 25rem">
+                  Title
+                  <p-sortIcon field="title" />
+                </th>
+                <th pSortableColumn="description" style="min-width: 25rem">
+                  Description
+                  <p-sortIcon field="description" />
+                </th>
+                <th pSortableColumn="status" style="min-width: 12rem">
+                  Status
+                  <p-sortIcon field="status" />
+                </th>
+                <th pSortableColumn="anonymous" style="min-width: 12rem">
+                  Anonymous
+                  <p-sortIcon field="anonymous" />
+                </th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-feedback>
+              <tr>
+                <td>
+                  <div class="flex justify-content-center flex-wrap gap-3 mb-4">
+                    <p-button icon="pi pi-pencil" [rounded]="true" [outlined]="true" severity="success"
+                      (onClick)="editFeedback(feedback.id)" *ngIf="showEditButton(feedback)" />
+                    <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
+                      (onClick)="deleteFeedback(feedback)" *ngIf="showDeleteButton(feedback)" />
+                    <p-button icon="pi pi-eye" class="mr-1" [rounded]="true" [outlined]="true"
+                      (onClick)="viewFeedback(feedback)" />
+                  </div>
+                </td>
+                <td>{{ feedback.name }}</td>
+                <td>{{ feedback.contactNumber }}</td>
+                <td>{{ feedback.title }}</td>
+                <td>{{ feedback.description }}</td>
+                <td>{{ feedback.status }}</td>
+                <td>{{ feedback.anonymous ? 'Yes' : 'No' }}</td>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="summary">
+              <div class="flex align-items-center justify-content-between">
+                In total there are {{ feedbacks ? feedbacks.length : 0 }} feedback entries.
+              </div>
+            </ng-template>
+          </p-table>
+        </p-tabPanel>
+
+      </p-tabView>
     </div>
 
     <div class="col-12 md:col-12 lg:col-12">
